refactor: remove unused imports in test